# CAD-Project-utils

./: .gitignore  CMakeLists.txt  README.md  gen_vs_sln.bat
cmake/: ThirdParty.cmake
src/: CMakeLists.txt  main.cpp
src/Application/: AppExport.h  CMakeLists.txt  GraphicsScene.cpp  GraphicsScene.h  MainWindow.cpp  MainWindow.h  OsgQtWidget.cpp  RenderSystem.cpp  RenderSystem.h
src/Application/App/: RenderSystem.cpp  RenderSystem.h
src/Application/Scene/: GraphicsScene.cpp  GraphicsScene.h
src/Application/UI/: MainWindow.cpp  MainWindow.h
src/Common/: CMakeLists.txt
src/Common/Private/: Point3d.cpp  Vector3d.cpp
src/Common/Public/: CommonExport.h  NameDefine.h  Point3d.h  Vector3d.h
src/Data/: CMakeLists.txt  DataExport.h  Document.cpp  Document.h  IObject.h  Object.cpp  Object.h  OccToOsg.cpp  OccToOsg.h  RenderItem.h  SceneGraph.cpp  SceneGraph.h  SphereObject.cpp  SphereObject.h
src/Data/Private/: Document.cpp  IObject.cpp  Object.cpp  Object.h  ObjectFactory.cpp  SphereObject.cpp  SphereObject.h
src/Data/Public/: DirtyFlags.h  Document.h  IChangeSink.h  IObject.h  ObjectFactory.h  ParameterItem.h  Property.h  PropertyRegistry.h
src/Geometry/: CMakeLists.txt
src/Geometry/Private/: Body.cpp  Body.h  GeoBuildUtils.cpp  IBody.cpp  IGeometry.cpp  MeshGenerator.cpp  OccBody.cpp  OccBody.h
src/Geometry/Public/: GeoBuildUtils.h  GeometryExport.h  IBody.h  IGeometry.h  MeshGenerator.h  Point3d.h  TessellationOptions.h
src/Platform/: CMakeLists.txt
src/Render/: CMakeLists.txt
src/Render/Private/: GraphicsNode.cpp  GraphicsNode.h  IGraphicsNode.cpp  IRenderView.cpp  OsgBackend.cpp  OsgBackend.h  OsgQtWidget.cpp  OsgQtWidget.h  RenderView.cpp  RenderView.h
src/Render/Public/: GeometryData.h  IGraphicsNode.h  IRenderView.h  RenderExport.h
src/View/: CMakeLists.txt
src/include/CADUtils/: distance.h
